--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Flower-shop</title>
+    <link rel="stylesheet" href="styles/flower.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <div class="banner">
+            <div>
+                <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution
+                    of letters.</p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <img src="Flower Asset/pngwing 10.png" alt="">
+        </div>
+
+
 
     </header>
     <main>
