--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <div class="banner">
             <div>
                 <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                <p class="banner-discription">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when
                     looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
                     distribution
                     of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
-            <img src="Flower Asset/pngwing 10.png" alt="">
+            <img class="banner-flower" src="flower-asset/pngwing 10.png" alt="">
         </div>
 
 
@@ -27,8 +28,57 @@
     </header>
     <main>
 
+        <section class="about">
+            <h3 class="section-title">Our Featured Flowers</h3>
+            <p class="section-discription">It is a long established fact that a reader will be distracted by the <br>
+
+                readable content of a page when looking at its layout.</p>
+            <div class="featured">
+                <img class="flower1" src="flower-asset/pngwing 6.png" alt="">
+                <img class="flower2" src="flower-asset/pngwing 5.png" alt="">
+                <img class="flower3" src="flower-asset/pngwing 7.png" alt="">
+            </div>
+        </section>
+
+        <div class="hot-deal">
+            <div>
+                <h1 class="hot-deal-title">Hot Deal ! Sale Up To 25% Off</h1>
+                <p class="hot-deal-discription">It is a long established fact that a reader will be distracted by the
+                    readable <br>
+                    content of a page when
+                    looking at its layout.</p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <img src="flower-asset/pngwing 8.png" alt="">
+        </div>
+        <section>
+            <h1 class="inista">Instagram</h1>
+            <p class="inista-discription">It is a long established fact that a reader will be distracted by the
+                readable <br>
+                content of a page when looking at its layout.</p>
+        </section>
+        <div class="flowers">
+            <img src="flower-asset/Flower 01.png" alt="">
+            <img src="flower-asset/Rectangle 4.png" alt="">
+            <img src="flower-asset/Rectangle 5.png" alt="">
+            <img src="flower-asset/Rectangle 6.png" alt="">
+
+        </div>
+
+        <div class="banner2">
+            <h1>Get The Latest Deals</h1>
+            <p class="banner2-discription">$30 coupon for first shopping</p>
+            <input class="email" type="email" name="" placeholder="Your email " id="">
+            <button class="btn">Subscribe</button>
+        </div>
+
     </main>
-    <footer>
+    <footer class="footer">
+        <h2 class="footer-title">Flower<span class="shop">Shop</span></h2>
+        <p class="footer-details">It is a long established fact that a reader will be distracted by the readable content
+            of a page when looking
+            at its layout.</p>
+        <p class="footer-details">@2020-2023, FlowerShop.com. All rights reserved. </p>
 
     </footer>
 </body>
